--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap');
+
 .main{
   background-color: rgb(29, 24, 24);
   color: white;
@@ -11,13 +13,14 @@
 .kingdoms{
   margin-top: 3rem;
   grid-column: 5 / 21;
-  font-family: 'Righteous', cursive;
+  font-family: 'Viaoda Libre', cursive;
   text-transform: uppercase;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
-  font-size: .7rem;
+  font-size: .6rem;
+  
 }
 .kingdoms > * {
   height: 10rem;
@@ -50,4 +53,5 @@
 
 .kingdom{
   grid-column: 5 / 21;
+  font-family: 'Viaoda Libre', cursive;
 }
